# ModelEvalHub

./: .gitignore  README.md
backend/: Cargo.toml
backend/config/: default.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: datasets.rs  db.rs  experiments.rs  lib.rs  metrics.rs  models.rs  projects.rs  result_store.rs  runs.rs  sample_outputs.rs  tasks.rs  utils.rs
backend/crates/integrations/core/: Cargo.toml
backend/crates/integrations/core/src/: lib.rs
backend/crates/integrations/helm/: Cargo.toml  README.md
backend/crates/integrations/helm/src/: lib.rs
backend/crates/integrations/lm_eval_harness/: Cargo.toml
backend/crates/integrations/lm_eval_harness/src/: lib.rs
backend/crates/integrations/opencompass/: Cargo.toml  README.md
backend/crates/integrations/opencompass/src/: lib.rs
backend/crates/integrations/text2image_benchmark/: Cargo.toml  README.md
backend/crates/integrations/text2image_benchmark/src/: lib.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: error.rs  eval.rs  lib.rs  settings.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: main.rs
docs/: api_design.md  architecture.md  data_model.md
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  style.css
frontend/src/api/: health.ts  http.ts  models.ts  runs.ts  tests.ts
frontend/src/pages/: DashboardPage.vue  ModelsPage.vue  RemoteTestsPage.vue  RunsPage.vue
frontend/src/types/: index.ts
