[package]
name = "unified-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sqlx.workspace = true
unified-domain = { path = "../domain" }
unified-shared = { path = "../shared" }

