[package]
name = "unified-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
unified-shared = { path = "../shared" }
clickhouse.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-types.workspace = true

