[package]
name = "unified-shared"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
clickhouse.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-types.workspace = true

