[package]
name = "unified-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sqlx.workspace = true
unified-domain = { path = "../domain" }
unified-shared = { path = "../shared" }

